--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,4 +10,7 @@
   .icons {
     @apply cursor-pointer hover:scale-125 hover:opacity-80;
   }
+  .progress {
+    @apply lg:w-32 lg:h-32 xl:w-44 xl:h-44 w-20 h-20;
+  }
 }
