--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,22 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+html {
+  scroll-behavior: smooth;
+}
+
 @tailwind components;
 @layer components {
   .code {
-    @apply text-sm text-[#6b7280] font-mono font-medium py-2;
+    @apply text-sm text-[#6b7280] font-mono font-medium py-1;
   }
   .icons {
     @apply cursor-pointer hover:scale-125 hover:opacity-80;
   }
   .progress {
     @apply lg:w-32 lg:h-32 xl:w-44 xl:h-44 w-20 h-20;
+  }
+  .input {
+    @apply rounded-md p-2 w-full;
   }
 }
